# 2025-sci-prog

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: README.md  TROUBLESHOOTING.md  devcontainer.json  setup.sh
.github/workflows/: claude-code-review.yml  claude.yml
data/: README.md
labs/: 01.md  README.md
labs/01/: 01.md  PythonForDataScience-2022.ipynb
labs/02/: Ready_STEDy_GO.ipynb  members.csv  ucenik.csv  zdravstveno.csv
labs/03/: Linearna_regresija.ipynb  Linearna_regresija_primjer.ipynb  Sales.ipynb  Zadatak_Linearna_regresija.ipynb  lab03a.py  lab03b.py
labs/04/: README.md
notebooks/: README.md
projects/: PROJECT_LIST.md  README.md  projectslist.md
projects/climate-analyzers-asmith-bjohnson/: README.md
projects/template-individual/: README.md
students/: README.md
students/03/: problems.md
students/03/data/: 01_ice_cream_sales.csv  02_exam_scores.csv  03_advertising_sales.csv  04_fuel_consumption.csv  05_house_price.csv  06_crop_yield.csv  07_production_defects.csv  08_electricity_cost.csv  09_reaction_time.csv  10_maintenance_cost.csv  11_plant_growth.csv  12_stopping_distance.csv  13_employee_productivity.csv  14_blood_pressure.csv  15_fuel_efficiency.csv  16_rent_price.csv  17_student_gpa.csv  18_monthly_sales.csv  19_electricity_usage.csv  20_website_visits.csv  21_machine_output.csv  22_employee_salary.csv  23_water_consumption.csv  24_reaction_rate.csv  25_pollution_level.csv  26_construction_cost.csv  27_recovery_time.csv  28_sales_revenue.csv  29_crop_yield_rainfall.csv  30_battery_life.csv
students/03/exercise/: README.md  ajurjevic.py  dbaric.py  dpavisic.py  jmestrovic.py  ldanolic(12).py  lkrvavica.py  m_babic  mbabic.py  mcovic.py  mjovanovic.py  mkatavic.py  mnakic.py  mpuizina.py  mrados.py  nvidovic.ipynb  pkatavic.py  pstipandz.py  rkrstic.py  sjadrijev.py  smachiedo.ipynb  smachiedo.py  zp_tlak_mkar.py
students/03/exercise2/: ajurjevic.py  jmestrovic.py  lkrvavica.py  mbabic.py  mcovic.py  mjovanovic.py  mkaroglan.py  mkatavic.py  mlovric.py  mpuizina.py  mrados.py  muvodic.py  nvidovic.py  pkatavic.py  pkristo.py  pstipandz.py  rkrstic.py  (+2 more)
(+12 files in other folders)
